--- a/index.html
+++ b/index.html
@@ -8,6 +8,18 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <section class="task-one">
+        Lorem ipsum, dolor sit amet consectetur adipisicing elit. Odio cumque consequatur ut. Non repellendus, itaque molestiae corporis accusantium necessitatibus velit atque! Totam asperiores minima molestias, cumque itaque vitae animi nihil.
+    </section>
 
+    <section class="task-two">
+       
+        
+    </section>
+
+
+    <section class="task-three">
+        <img src="assets/smiley.jpg">
+    </section>
 </body>
 </html>
